# Onstell

./: .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  RELEASING.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml  security.yml
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: discoveryService.ts  emergencyShortcutGuard.test.ts  emergencyShortcutGuard.ts  inputCaptureGuard.test.ts  inputCaptureGuard.ts  inputEvents.test.ts  inputEvents.ts  keyboardModel.test.ts  keyboardModel.ts  layoutModel.ts  layoutStorage.ts  loopbackFollower.test.ts  loopbackFollower.ts  main.ts  pairingTrustStore.test.ts  (+8 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ISSUE_ROADMAP.md  WIKI.md
docs/releases/: v0.1.0-beta.4.md
docs/wiki/: Clipboard-Sync-Design.md  Device-Desktop-Mode.md  Home.md  Input-Forwarding-Architecture.md  Loopback-Follower-Simulator.md  Pairing-Session-Transport.md  Pairing-and-Trust.md  Project-Overview.md  Read-Only-Input-Capture-Spike.md  Release-and-Packages.md  Roadmap.md  Security-Model.md  Virtual-Monitor-Mode.md  Widget-Milestone.md
packaging/: release-assets.json
prototype/: onstell-widget.html
scripts/: install.ps1  install.sh  run-emergency-shortcut-tests.mjs  run-input-event-tests.mjs  run-input-guard-tests.mjs  run-keyboard-tests.mjs  run-loopback-tests.mjs  run-pairing-trust-tests.mjs  run-permission-tests.mjs  run-pointer-edge-tests.mjs  run-routing-tests.mjs
